# image-processing-service

./: .env.example  .gitignore  Dockerfile  README.md  config.py  crud.py  db.py  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt
api/: __init__.py
api/v1/: __init__.py
api/v1/image/: __init__.py  image.py
api/v1/users/: __init__.py  users.py
app/crud/: image.py  user.py
app/models/: __init__.py  image.py  user.py
app/schemas/extras/: __init__.py  current_user.py  token.py
app/schemas/requests/: image.py  user.py
app/schemas/responses/: user.py
core/: config.py  server.py
core/crud/: __init__.py  base.py
core/database/: __init__.py  session.py
core/exceptions/: __init__.py  base.py
core/factory/: __init__.py  factory.py
core/utils/: __init__.py  aws_utils.py  database_config.py  images.py  is_running_in_docker.py  jwt_handler.py  password_handler.py
crud/: __init__.py  base.py  image.py  user.py
migration/: env.py
migration/versions/: 23a5b6f33fcf_initial_migration.py
migrations/: env.py
migrations/versions/: 11f91df090b3_initial_migration.py  a3001fce1f9e_initial_migration.py  b70b9df90e71_initial_migration.py
model/: __init__.py  image.py  user.py
models/: __init__.py  image.py
route/: app.py  image.py  user.py
routes/: app.py  image.py
schema/: image.py  token.py  user.py
schemas/: image.py
utils/: image_service.py
utils/dependency/: authentication.py
utils/jwt_handler/: __init__.py  jwt_handler.py
utils/middleware/: __init__.py  authentication.py
utils/password/: __init__.py
(+5 files in other folders)
